<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/activity_detail_view"
    tools:context=".activities.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMargin="20dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:title="Hello Worldd"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                app:srcCompat="@drawable/poster_bohemian"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/poster_image"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/img_poster_contentdesc" />
            <androidx.appcompat.widget.Toolbar
                android:layout_marginTop="20dp"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_detail" />

    <ImageButton
        android:background="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/detail_collapse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
        android:contentDescription="@string/arrow_up_contentdesc" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>