<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="Favorite"
        android:icon="@drawable/ic_favorite_disabled_24dp"
        android:id="@+id/action_favorite"
        app:showAsAction="always"/>
</menu>